--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
    - docker build -t jlnzllc/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-   - docker run -e CI=true jlnzllc/react-test npm test
+   - docker run jlnzllc/react-test npm test -- --coverage
 
 after_success:
    - docker build -t jlnzllc/multi-client ./client
