--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 sudo: required
+language: generic
+
 services:
    - docker
 
@@ -6,7 +8,7 @@ services:
    - docker build -t jlnzllc/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-   - docker run jlnzllc/react-test npm test -- --coverage
+   -  docker run -e CI=true USERNAME/react-test npm test
 
 after_success:
    - docker build -t ayesjm/multi-client ./client
