--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ services:
    - docker
 
   before_install: 
-   - docker build -t jlnzllc/react-test -f ./client/Dockerfile.dev ./client
+   - docker build -t ayesjm/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-   -  docker run -e CI=true jlnzllc/react-test npm test
+   -  docker run -e CI=true ayesjm/react-test npm test
 
 after_success:
    - docker build -t jlnzllc/multi-client ./client
