--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 
 after_success:
    - docker build -t ayesjm/multi-client ./client
-   - docker build -t ayesjm/mult-nginx ./nginx
+   - docker build -t ayesjm/multi-nginx ./nginx
    - docker build -t ayesjm/multi-server ./server
    - docker build -t ayesjm/multi-worker ./worker
 # Log in to docker CLI
