changed travis yml and updated dockerrunawsjson

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,16 @@ after_success:
   - docker push jlnzllc/multi-nginx
   - docker push jlnzllc/multi-server
   - docker push jlnzllc/multi-worker
+
+deploy:
+  edge: true
+  provider: elasticbeanstalk
+  region: us-east-1
+  app: multi-docker
+  env: multiDocker-env
+  bucket_name: elasticbeanstalk-us-east-1-405415478195
+  bucket_path: docker-multi
+  on:
+     branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
